<resources>
    <string name="app_name">LifecycleV3</string>
    <string name="registerBtn">Register</string>
    <string name="loginBtn">Login</string>
    <string name="emailInput">Email</string>
    <string name="passwordInput">Password</string>
    <string name="personnummerInput">Personnummer</string>
    <string name="addressInput">Address</string>
    <string name="nameInput">Name</string>
    <string name="phoneInput">Phone</string>
    <string name="loginRegisterBtn">No account? Click here to register!</string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">No</string>
    <string name="editProfileBtn">Edit</string>
    <string name="editBtn">Update</string>
    <string name="editChoiceText">What do you want to update?</string>
</resources>